--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack  --config webpack.build.js",
+    "dev": "webpack --progress --colors --watch --config webpack.dev.js",
+    "prepublish": "npm run build"
   },
+  "main": "lib/letters.min.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/guillaumerxl/letters.js.git"
@@ -30,8 +33,9 @@
   },
   "homepage": "https://github.com/guillaumerxl/letters.js",
   "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-es6-module-transpiler": "^0.2.2",
-    "gulp-minify": "*"
+    "babel-loader": "^6.2.1",
+    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-preset-es2015": "^6.3.13",
+    "webpack": "^1.12.11"
   }
 }
