--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "letters.js",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Package to animate each letters of a word",
-  "main": "lib/letters.js",
+  "main": "lib/letters-common.js",
   "directories": {
     "test": "tests"
   },
   "scripts": {
     "build": "webpack  --config webpack.build.js",
     "dev": "webpack --progress --colors --watch --config webpack.dev.js",
-    "prepublish": "npm run build"
+    "prepublish": "webpack --config webpack.publish.js"
   },
-  "main": "lib/letters.min.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/guillaumerxl/letters.js.git"
@@ -33,6 +32,7 @@
   },
   "homepage": "https://github.com/guillaumerxl/letters.js",
   "devDependencies": {
+    "babel-cli": "^6.4.5",
     "babel-loader": "^6.2.1",
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-preset-es2015": "^6.3.13",
