--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "letters.js",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Package to animate each letters of a word",
-  "main": "lib/letters.js",
+  "main": "lib/letters-common.js",
   "directories": {
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack  --config webpack.build.js",
+    "dev": "webpack --progress --colors --watch --config webpack.dev.js",
+    "prepublish": "webpack --config webpack.publish.js"
   },
   "repository": {
     "type": "git",
@@ -30,8 +32,10 @@
   },
   "homepage": "https://github.com/guillaumerxl/letters.js",
   "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-es6-module-transpiler": "^0.2.2",
-    "gulp-minify": "*"
+    "babel-cli": "^6.4.5",
+    "babel-loader": "^6.2.1",
+    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-preset-es2015": "^6.3.13",
+    "webpack": "^1.12.11"
   }
 }
